--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     build: .
     volumes:
       - .:/var/www/html
+    environment:
+      XDEBUG_CONFIG: remote_host=192.168.1.141
     ports:
       - "8081:80"
 
